# ytapi-to-dynamodb

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deployment.yml
functions/: README.md
functions/connectors/: dynamodb.py  sqs.py  yt_api.py
functions/crawler/: statistics.py
functions/crawler/connectors/: dynamodb.py  yt_api.py
functions/crawler/models/: video_event.py  video_statistics.py
functions/models/: dynamodb.py  video_event.py
functions/producer/: statistics.py
terraform/: README.md  backend.tf  crawler-lambdas.tf  dynamodb.tf  ecr.tf  lambda_image.tf  main.tf  producer.tf  sqs.tf  variables.tf
terraform/lambdas/crawler-lambda/: main.tf  outputs.tf  variables.tf
terraform/lambdas/producer-lambda/: main.tf  variables.tf
tests/: README.md  conftest.py  pytest.ini  test_statistics.py  test_statistics_crawler.py  test_statistics_producer.py  test_yt_api.py
tests/fixtures/: dynamodb.py  lambda_context.py  sqs.py  yt_api.py
tests/functions/: mocks.py
tests/functions/crawler/: conftest.py  test_statistics.py
tests/functions/crawler/connectors/: conftest.py  test_yt_api.py
