[tool.poetry]
name = "ytapi-dynamodb"
version = "0.1.0"
description = ""
authors = ["Christian Reil <christian.reil@lhind.dlh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
aws-lambda-powertools = "^2.26.1"
requests = "^2.31.0"
boto3 = "^1.33.5"


[tool.poetry.group.docs.dependencies]
pytest = "^7.4.3"
moto = "^4.2.8"
pytest-env = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
