[tool.poetry]
name = "ytapi-dynamodb"
version = "0.1.0"
description = ""
authors = ["Christian Reil <christian.reil@lhind.dlh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
aws-lambda-powertools = "^2.32.0"
requests = "^2.31.0"
boto3 = "^1.34.29"


[tool.poetry.group.docs.dependencies]
pytest = "^8.0.0"
moto = "^5.0.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
